--- a/package.json
+++ b/package.json
@@ -3,13 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
+    "@tabler/icons-react": "^3.30.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
+    "dotted-map": "^2.2.3",
+    "flubber": "^0.4.2",
+    "framer-motion": "^12.4.7",
+    "gsap": "^3.13.0",
+    "i": "^0.3.7",
+    "lottie-react": "^2.4.1",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.10.1",
+    "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^3.2.0",
+    "three": "^0.173.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
